--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,21 +17,40 @@
 }
 /* width */
 ::-webkit-scrollbar {
-  width: 10px;
+    width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-  border-radius: 10px;
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgb(59 130 246);
-  border-radius: 10px;
+    background: rgb(59 130 246);
+    border-radius: 10px;
 }
 
 #container {
-  padding: 0px !important;
+    padding: 0px !important;
+}
+
+.MuiDataGrid-row {
+    color: #fff;
+}
+
+.MuiDataGrid-cell {
+    display: flex;
+    justify-content: center !important;
+    align-items: center;
+}
+.MuiDataGrid-columnHeaderTitleContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.MuiToolbar-root {
+  color: #fff;
 }
